# triton-inference-server-third_party

./: CMakeLists.txt  README.md
cnmem/cnmem/: CMakeLists.txt  amd_hipify.py
